# Speedtest-Validator

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  DAS_SpeedTest_Validator_Architecture.html  README.md  Speedtest_Validator_Gap_Analysis.html  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: run.md  test.md  validate-site.md
.project/: apt.txt  requirements.txt  spec.yaml
code/: __init__.py  __main__.py  analysis_engine.py  ciq_reader.py  config.py  extraction_validator.py  image_preprocessor.py  investigate_engine.py  knowledge_engine.py  main.py  ollama_client.py  output_docx.py  output_xlsx.py  screenshot_parser.py  threshold_engine.py
code/knowledge/: __init__.py  causal_dag.json  causal_dag.py  kpi_mappings.py  mop_thresholds.py  rf_parameters.py  throughput_benchmarks.py
code/prompts/: kpi_impact_generation.md  nr_focused_extraction.md  observation_generation.md  recommendation_generation.md  service_mode_extraction.md  speedtest_extraction.md
code/utils/: __init__.py  excel_utils.py  file_utils.py  gpu_utils.py  text_utils.py
docs/: architecture.md  user_guide.md
input/: DAS_Validation_Thresholds.xlsx  MS2_KPI_and_Counters.xlsx  RF_Throughput_Analysis_Universal_RAG.docx
tests/: __init__.py  test_causal_dag.py  test_ciq_reader.py  test_extraction_validator.py  test_gpu_utils.py  test_image_preprocessor.py  test_integration.py  test_knowledge_engine.py  test_ollama_client.py  test_output_generators.py  test_screenshot_parser.py  test_threshold_engine.py
tests/fixtures/: vlm_response_st.json  (+3 more)
(+2 files in other folders)
